<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/light_green"
    android:orientation="vertical"
    tools:context=".UI.Activity.LoginActivity">

    <com.example.sit.Utils.DrawCircleImageViewUtil
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:src="@mipmap/xxz_logo" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/userNameText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/circle_board"
        android:layout_gravity="center_horizontal"
        android:hint="@string/username_tips"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/userPasswordText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/circle_board"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password_tips"
        android:inputType="textPassword"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/registry_btn"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/registry_text"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/login_check_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="4dp"
                android:buttonTint="@color/white"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_access"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintVertical_bias="0.242" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/login_bottom_text"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>