<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@mipmap/reg_bg"
    android:orientation="vertical"
    tools:context=".UI.Activity.RegistryActivity">

    <EditText
        android:background="@drawable/circle_board_reg"
        android:id="@+id/reg_username"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:hint="@string/reg_username_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:background="@drawable/circle_board_reg"
        android:id="@+id/reg_pwd"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/reg_password_tip"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_username" />

    <EditText
        android:background="@drawable/circle_board_reg"
        android:id="@+id/reg_re_pwd"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/reg_re_password_tip"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_pwd" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/reg_welcome"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:background="@drawable/circle_board_btn"
        android:id="@+id/back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:text="@string/reg_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_pwd"
        app:layout_constraintVertical_bias="0.423" />

    <Button
        android:background="@drawable/circle_board_btn"
        android:id="@+id/reg_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:text="@string/reg_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_pwd"
        app:layout_constraintVertical_bias="0.423" />

</androidx.constraintlayout.widget.ConstraintLayout>