<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:attrs="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--    图片显示区域-->
    <com.example.sit.views.RoundRectImageView
        android:id="@+id/home_item_img"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        attrs:radius="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <!--    标题区域-->
        <TextView
            android:id="@+id/home_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:maxLines="2"
            android:text="@string/home_item_title"
            android:textSize="16sp" />

        <!--    价格区域-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="@string/money_icon"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/home_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="@string/home_item_price"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>